--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.yanzhenjie:permission:1.0.5'
     compile files('libs/butterknife-7.0.1.jar')
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     compile files('libs/tbs_sdk_thirdapp_v3.6.0.1310_43612_sharewithdownload_withoutGame_obfs_20180706_163319.jar')
+    compile 'com.google.code.gson:gson:2.2.4'
 }
